Fix PIP controls not showing #130 Fix picture-in-picture controls not showing on hover when the rounded corners tweak is enabled.
Also disables rounded corners on pop-up windows (such as extension pop
-ups).

--- a/chrome/global/browser.css
+++ b/chrome/global/browser.css
@@ -18,31 +18,31 @@
 /* Rounded Corners Tweak */
 @media (-moz-bool-pref: "uc.tweak.rounded-corners") {
   /* Since Firefox 120, when the bookmarks bar is set to only open on new tabs,
-  the bookmarks bar overlaps the #browser element. */
+   * the bookmarks bar overlaps the #browser element. */
 
   /* Change the element that shifts the browser content to the correct position. */
-  :root[BookmarksToolbarOverlapsBrowser] .newTabBrowserPanel,
-  :root[BookmarksToolbarOverlapsBrowser] #sidebar-box {
+  #main-window[BookmarksToolbarOverlapsBrowser] .newTabBrowserPanel,
+  #main-window[BookmarksToolbarOverlapsBrowser] #sidebar-box {
     padding-top: 0 !important;
   }
 
-  :root[BookmarksToolbarOverlapsBrowser] #browser {
+  #main-window[BookmarksToolbarOverlapsBrowser] #browser {
     margin-top: var(--bookmarks-toolbar-overlapping-browser-height);
   }
 
   /* Make sure that the toolbars are not positioned in-front of the browser
-  element. */
-  :root[BookmarksToolbarOverlapsBrowser] #navigator-toolbox:not([style*="z-index"]) {
+   * element. */
+  #main-window[BookmarksToolbarOverlapsBrowser] #navigator-toolbox:not([style*="z-index"]) {
     z-index: auto !important;
   }
 
   /* Move the browser element in-front of the toolbars when on the new tab page. */
-  :root:not([BookmarksToolbarOverlapsBrowser]) #browser {
+  #main-window:not([BookmarksToolbarOverlapsBrowser]) #browser {
     z-index: 1 !important;
   }
 
   /* Variables used for the rounded corners. */
-  :root {
+  #main-window:not([chromehidden~="toolbar"]) {
     --uc-tweak-rounded-corners-padding: 4px;
     --uc-tweak-rounded-corners-radius: 8px;
     --uc-tweak-rounded-corners-shadow:
@@ -64,6 +64,13 @@
       &:-moz-window-inactive {
         --browser-frame-bgcolor: var(--lwt-accent-color-inactive, var(--lwt-accent-color));
       }
+    }
+  }
+
+  /* Hide border below titlebar on macOS, as its titlebar already has a border. */
+  @media (-moz-platform: macos) {
+    :root[chromehidden~="toolbar"][chromehidden~="location"][chromehidden~="directories"] {
+      border-top: none !important;
     }
   }
 
